--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <img src="nuageux.gif" alt="Nuage" id="nuage">
     <div id="meteo">
+        <label for="input"></label>
         <input type="text" value="" placeholder="Nouvelle ville..." id="input">
         <button type="submit" id="button">Ajouter</button>
         <h1 id="ville">ville</h1>
@@ -20,5 +21,6 @@
         <span id=""></span>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
 <script src="app.js"></script>
 </html>
